# memocracy

./: .eslintrc.json  .gitignore  Anchor.toml  BAGS_HACKATHON_SUBMISSION.md  BAGS_INTEGRATION_PLAN.md  CHAT_CONTEXT.md  CRON_SETUP.md  DATABASE_MIGRATION.md  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  EMBED_WIDGET.md  FEE_SHARE_DISPLAY_IMPLEMENTATION.md  HACKATHON_SUBMISSION_SHORT.txt  HANDOVER.md  IMPLEMENTATION_SUMMARY.md  LOGO_GENERATION_PROMPT.md  NEW_CHAT_PROMPT.md  ON_CHAIN_VOTING_README.md  PRODUCTION_READINESS.md  QUICK_DEPLOY.md  README.md  TECH_STACK.md  deploy-remote.sh  deploy.sh  env.example  env.production.example  next.config.js  package-lock.json  package.json  prepare-deployment.sh  upload-to-server.sh
.github/workflows/: security.yml
prisma/: schema.prisma
prisma/migrations/20250101000000_add_onchain_vote_fields/: migration.sql
prisma/migrations/20250918142302_init/: migration.sql
prisma/migrations/20250918164027_add_token_ca/: migration.sql
programs/memocracy-votes/: Cargo.toml  README.md
programs/memocracy-votes/src/: lib.rs
security/: dependency-risk.md  sbom.json
src/app/: layout.tsx
src/components/: Header.tsx  SearchAndFilters.tsx  WalletProvider.tsx
src/lib/: admin.ts  apiHelpers.ts  bagsApi.ts  bagsCoinManager.ts  bagsFeeShare.ts  bagsWalletMonitor.ts  db.ts  dexscreener.ts  env.ts  errorHandling.ts  foundingWalletTrustScore.ts  logger.ts  rateLimit.ts  session.ts  signingMessages.ts  solanaHelpers.ts  solanaPayLinks.ts  solanaVoteProgram.ts  solanaWalletMonitor.ts  tokenImages.ts  verifySolanaSignature.ts  voteSync.ts
(+72 files in other folders)
