[package]
name = "memocracy-votes"
version = "0.1.0"
description = "Memocracy On-Chain Voting Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "memocracy_votes"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
